# mm-bot

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml  requirements-dev.txt  requirements.txt
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-project-foundation-config/: 01-A-SUMMARY.md  01-B-SUMMARY.md  01-C-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-PATTERNS.md  01-PLAN-A-scaffold.md  01-PLAN-B-config.md  01-PLAN-C-logging-entrypoint.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-connectivity-api-agent-auth/: 02-A-PLAN.md  02-A-SUMMARY.md  02-B-PLAN.md  02-B-SUMMARY.md  02-C-PLAN.md  02-C-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/mgw_mm/: __init__.py  __main__.py  ai_guardrail.py  config.py  exchange.py  logging_setup.py  market_data.py  orchestrator.py  pnl.py  quoting.py  risk.py  telegram.py
tests/: test_config.py  test_logging.py  test_smoke.py
