[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "mgw-mm"
version = "0.1.0"
requires-python = ">=3.11"
description = "Hyperliquid MGW/USDC Volume Market-Maker Bot"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
